test/trivial/deitz/test_var_decl_strange1.good
test_var_decl_strange1.chpl:1: In function '__init_test_var_decl_strange1':
test_var_decl_strange1.chpl:1: error: 'y' used before defined
