test/trivial/deitz/test_var_decl_strange1.chpl
var x : integer = y;
var y : integer = x;

writeln(x);
writeln(y);
